# trypanophobe

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  docker-compose.yml  smoke.sh
config/: env.defaults  pihole.toml
docker/: Dockerfile  bake_models.py  entrypoint.sh  extract_cls_head.py  paddleocr_server.py  setup-pihole-log-fifos.sh
fixtures/: ATTRIBUTION.md
scripts/: download-models.sh
src/: config.rs  convert_config.rs  error.rs  lib.rs  network_policy.rs  openapi.rs  readiness.rs  state.rs
src/middleware/: fifo_concurrency.rs  mod.rs
src/pipeline/: chunk.rs  convert.rs  mod.rs  moderate.rs  respond.rs  url_guard.rs
src/routes/: filter.rs  health.rs  mod.rs
src/services/: chunker.rs  math.rs  mod.rs  nsfw_image.rs  nsfw_text.rs  ocr.rs  paddleocr.rs  pihole.rs  preprocess.rs  sentinel.rs  sidecar.rs  sliding_window.rs  wolf.rs
src/services/chunker/: bake_assets.py  pyproject.toml  server.py
src/services/ocr/: bake_assets.py  paddle_ocr.py  pyproject.toml  server.py
supervisor/: supervisord.conf
